unpackaged/main/default/objects/AttributeNames__c/AttributeNames__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Targeting Widget Tabs</description>
    <label>AttributeNames</label>
</CustomObject>