unpackaged/main/default/objects/AttributeNames__c/fields/Attribute_API_name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_API_name__c</fullName>
    <description>Attribute API names to link to each Targeting Widget Tab</description>
    <inlineHelpText>Attribute API names to link to each Targeting Widget Tab</inlineHelpText>
    <label>Attribute API name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>