unpackaged/main/default/objects/AttributeNames__c/fields/Include_Exclude_Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>Include_Exclude_Logic_Type__c</fullName>
    <defaultValue>&#39;Type1&#39;</defaultValue>
    <description>Possible values: 
- Type1: Parent/ Child relationship enforced
- Type2: records are handled independently (example: excluding a parent won&#39;t impact on a child)</description>
    <inlineHelpText>Possible values: 
- Type1: Parent/ Child relationship enforced
- Type2: records are handled independently (example: excluding a parent won&#39;t impact on a child)</inlineHelpText>
    <label>Include Exclude Logic Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>