unpackaged/main/default/objects/AttributeNames__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Sequence in which the Targeting Widget tabs will be displayed</description>
    <inlineHelpText>Sequence in which the Targeting Widget tabs will be displayed</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>