unpackaged/main/default/objects/AttributeNames__c/fields/TabsList__c.field-meta.xml
<CustomField>
    <fullName>TabsList__c</fullName>
    <defaultValue>&#39;searchTab&#39;</defaultValue>
    <description>CSV list of tab IDs to be displayed. Available values are &quot;searchTab&quot;, &quot;enterTextTab&quot;, &quot;pasteValuesTab&quot; (all without quotes)</description>
    <inlineHelpText>CSV list of tab IDs to be displayed. Available values are &quot;searchTab&quot;, &quot;enterTextTab&quot;, &quot;pasteValuesTab&quot; (all without quotes)</inlineHelpText>
    <label>TabsList</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>